kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angie-deployment
  namespace: homework
  labels:
    app: angie
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: angie
  template:
    metadata:
      labels:
        app: angie
    spec:
      containers:
      - name: nginx-fork
        image: docker.angie.software/angie:1.11.6-minimal
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shared-data 
          mountPath: /homework
        - name: angie-config
          mountPath: /etc/angie/http.d/default.conf
          subPath: angie-default.conf
        - name: homework-conf
          mountPath: /homework/conf
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - "rm -f /homework/index.html && sleep 5"
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: homework-pvc
      - name: angie-config 
        configMap:
          name: config
      - name: homework-conf
        configMap:
          name: config
