kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angie-service
  namespace: homework
spec:
  type: ClusterIP
  selector:
    app: angie
  ports:
    - name: tcp
      port: 8000
      targetPort: 8000
      protocol: TCP
